--- a/StarWars.html
+++ b/StarWars.html
@@ -47,10 +47,10 @@
     font-size: 30px;
  }
  button{
-    margin: 0px 15px 20px;  
+    margin: 15px 15px 20px;  
  }
  input{
-    margin: 15px;
+    margin: 15px 15px 0px 15px;
  }
 .cor{
     color: #161674 ;
@@ -59,12 +59,33 @@ table{
     border-radius: 5px;
     font-size: 25px;
 }
+.vermelho{
+    display: none;
+    color: rgb(177, 0, 0);
+}
     </style>
+
+</head>
+<body>
+    
+    <div id="containerCompleto">
+        <div id="containerCompleto1">
+            <h2>Digite o nome do seu personagem: </h2>
+            <label for="floatingInput">Nome do seu personagem ↓</label>
+            <input type="email" class="form-control" id="floatingInput" placeholder="Luke Skywalker" oninput="limpar()">
+            <span id="naoEncontrado" class="vermelho">Personagem não encontrado.</span>
+            <span id="semValor" class="vermelho">Digite um valor!</span>
+            <button class="btn btn-primary" onclick="buscarPersonagem()">Buscar personagem</button>
+            <div id="container" class="container"></div>
+        </div>
+    </div>
     <script>   
         async function buscarDados(nome){
             const dadosBruto = await fetch('https://swapi.dev/api/people/')
             const dadosAfavel = await dadosBruto.json()
             const resultadoDaPesquisa = await dadosAfavel.results
+            const valor1 = document.getElementById('floatingInput')
+            a = true
             resultadoDaPesquisa.forEach(variavel => {
                 if(variavel.name == nome){
                     const container = document.getElementById('container')
@@ -87,30 +108,37 @@ table{
                         </tr>
                         </table>
                     `
+                    a = false
                 }
             })
-        }
-        function buscarPersonagem(){
-            const valor = document.getElementById('floatingInput').value
-            if(valor == ""){
-                console.log("Digite um nome!")
-            } else{
-                buscarDados(valor)
+            if(a == true){
+                const valor3 = document.getElementById('naoEncontrado')
+                valor1.style.border = "2px solid red"
+                valor3.style.display = "block"
+            } else if (a == false) {
+                valor1.style.border = "0px solid red"
             }
         }
+        async function buscarPersonagem(){
+            const valor = document.getElementById('floatingInput').value
+            const valor1 = document.getElementById('floatingInput')
+            const valor2 = document.getElementById('semValor')
+            if(valor == ""){
+                valor1.style.border = "2px solid red"
+                valor2.style.display = "block"
+            } else{
+                await buscarDados(valor)
+            }
+        }
+        function limpar(){
+            const valor3 = document.getElementById('naoEncontrado')
+            const valor2 = document.getElementById('semValor')
+            const valor1 = document.getElementById('floatingInput') 
+            valor1.style.border = "0px solid red"
+            valor2.style.display = "none"
+            valor3.style.display = "none"
+        }
     </script>
-</head>
-<body>
-    
-    <div id="containerCompleto">
-        <div id="containerCompleto1">
-            <h2>Digite o nome do seu personagem: </h2>
-            <label for="floatingInput">Nome do seu personagem ↓</label>
-            <input type="email" class="form-control" id="floatingInput" placeholder="Luke Skywalker">
-            <button class="btn btn-primary" onclick="buscarPersonagem()">Buscar personagem</button>
-            <div id="container" class="container"></div>
-        </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
